@@ -82,14 +82,10 @@ namespace Rcpp{
             return Rcpp_fast_eval(call, R_GlobalEnv);
         }
 
-        #if defined(HAS_VARIADIC_TEMPLATES)
-            template <typename... T>
-            SEXP operator()(const T&... args) const {
+        template <typename... T>
+        SEXP operator()(const T&... args) const {
             return invoke(pairlist(args...), R_GlobalEnv);
-            }
-        #else
-            #include <Rcpp/generated/Function__operator.h>
-        #endif
+        }
 
         /**
          * Returns the environment of this function
